<resources>
    <string name="app_name">Неман</string>
    <string name="tab_text_1">Вход</string>
    <string name="tab_text_2">Регистрация</string>
    <string name="user_name">Имя пользователя</string>
    <string name="login">Войти</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="phone">Телефон</string>
    <string name="squad">Номер отряда</string>
    <string name="notification">Уведомление</string>
    <string name="notificationDS">Уведомление расписания дня</string>
    <string name="notificationEvent">Уведомление мероприятий</string>

    <string name="no_data_massage">Вы не ввели данные для авторизации.</string>
    <string name="close">Закрыть</string>
    <string name="cancellation">Отмена</string>
    <string name="contin">Продолжить</string>
    <string name="successful_authorization">Вы успешно авторизавались.</string>
    <string name="unsuccessful_authorization">Вы не зарегистрированы или данные введины не коректно.</string>
    <string name="alredy_registered">Пользователь с таким именем уже зарегистрированы.</string>
    <string name="uncorrect_password">Пароли не совпадают.</string>
    <string name="successful_authorization_and_login">Вы успешно зарегестрированы и авторизованы.</string>
    <string name="counselor">Профиль</string>
    <string name="squad_menu">Отряды</string>
    <string name="achievements">Нагарады</string>
    <string name="child">Дети</string>
    <string name="child_spinner">Ребёнок</string>
    <string name="childList">Список детей</string>
    <string name="child_list_empty">Список детей пуст. Добавьте детей, чтобы добавить комнату.</string>
    <string name="room">Комнаты</string>
    <string name="rooms">Комната</string>
    <string name="events">Мероприятия</string>
    <string name="name_default">Имя Фамилия</string>
    <string name="verified">Статус</string>
    <string name="back">Назад</string>
    <string name="daily_schedule">Расписание дня</string>
    <string name="data">Дата: </string>
    <string name="new_day">Новый день</string>
    <string name="data_event_add_schedule">Дата: </string>
    <string name="name_event_add_schedule">Название события: </string>
    <string name="time_event_add_schedule">Время: </string>
    <string name="enter_name_event">Введите название мероприятия.</string>
    <string name="enter_data_event">Введите дату мероприятия.</string>
    <string name="enter_time_event">Введите время мероприятия.</string>
    <string name="enter_floor">Введите этаж.</string>
    <string name="enter_number_room">Введите номер комнаты.</string>
    <string name="enter_quantity_child">Введите кол-во детей.</string>
    <string name="select_FIO_child">Выберите ребёнка.</string>
    <string name="name">Имя: </string>
    <string name="name_search">Имя ребёнка</string>
    <string name="surname_search">Фамилия ребёнка</string>
    <string name="patronamyc_search">Отчество ребёнка</string>
    <string name="birthday_search">Дата рождения ребёнка</string>
    <string name="phone_number_search">Номер телефона родителей</string>
    <string name="search">Поиск</string>
    <string name="surname">Фамилия: </string>
    <string name="patronamyc">Отчество: </string>
    <string name="birthday">Дата рождения: </string>
    <string name="phone_number">Номер телефона: </string>
    <string name="edit_data">Редактировать данные</string>
    <string name="child_list_title">Ребёнок: </string>
    <string name="edit_child">Добавить ребёнка</string>
    <string name="parents_phone_number">Номер родителей: </string>
    <string name="no_dat">Вы не ввели данные.</string>
    <string name="new_room">Новая комната</string>
    <string name="search_title">Поиск по: </string>
    <string name="floor">Этаж: </string>
    <string name="room_number">Номер комнаты: </string>
    <string name="child_quantity">Количество детей: </string>
    <string name="floor_menu">Этаж</string>
    <string name="room_number_menu">Номер комнаты</string>
    <string name="child_quantity_menu">Количество детей</string>
    <string name="squads">Отряд</string>
    <string name="new_squads">Новый отряд</string>
    <string name="squads_number">Номер отряда: </string>
    <string name="squads_name">Название отряда: </string>
    <string name="squads_number_menu">Номер отряда</string>
    <string name="squads_name_menu">Название отряда</string>
    <string name="achievement">Награда</string>
    <string name="new_achievement">Новая награда</string>
    <string name="place">Занятое место: </string>
    <string name="place_menu">Занятое место</string>
    <string name="name_event">Название мероприятия: </string>
    <string name="insert_item">Добавить событие</string>
    <string name="import_text_file">Импортировать в файл</string>
    <string name="empty_list_text">Список пуст!</string>
    <string name="name_event_selection_arguments">Название события</string>
    <string name="selection_arguments_time">Время</string>
    <string name="selection_arguments_date">Дата</string>
    <string name="select_type_search">Выберите тип поиска.</string>
    <string name="no_data_to_search">Вы не ввели данные для поиска.</string>
    <string name="no_argument_selected_title">Вы не выбрали критэрий поиска!</string>
    <string name="no_argument_selected">Для выбоа нажмите на три точки в правом верхнем углу экрана.</string>
    <string name="no_data_after_search_title">Данные не найдены!</string>
    <string name="no_data_after_search">Возможно данные не соответствуют выбранному критэрию. \nПовторите попытку!\n </string>
    <string name="take_photo">Сделать фото</string>
    <string name="choice_from_gallery">Выбрать из галереи</string>
    <string name="error_uploading_image">Ошибка при загрузке изображения</string>
    <string name="error_uploading_image_repit_operation">Ошибка при загрузке изображения, попробуйте повторно выбрать изображения.</string>
    <string name="exit_text">Вы действительно хотите выйти?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit_layout_title">Экран выхода!</string>
    <string name="exit_activity_title">Экран выхода</string>
    <string name="exit_layout">Для отмены или подтверждения нажмите кнопку \"Назад\" </string>
    <string name="enter_data">Ввести данные</string>
    <string name="error_empty_field">Поле пустое!</string>
    <string name="add_counselor_correct">Данные пользователя успешно добавлены.</string>
    <string name="error_uploading_data">Ошибка при загрузке данных.</string>
    <string name="delete_data">Удалить данные</string>
    <string name="name_surname">Имя Фамилия</string>
    <string name="item_surname">Фамилия: </string>
    <string name="item_name">Имя: </string>
    <string name="item_patronymic">Отчество: </string>
    <string name="item_birthday">Дата рождения: </string>
    <string name="item_phone_number">Номер телефона: </string>
    <string name="add">Добавить</string>
    <string name="edit">Редактировать</string>
    <string name="update">Обновить</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="splash_text">Детский лагерь\n \"Неман\"</string>
    <string name="enter_number_squads">Введите номер отряда.</string>
    <string name="enter_name_squads">Введите название отряда.</string>
    <string name="enter_achievemenets_name_event">Введите название мероприятия.</string>
    <string name="enter_achievemenets_plase">Введите занятое место.</string>
    <string name="add_squads">Добавить отряд</string>
    <string name="add_room">Добавить комнату</string>
    <string name="add_achievements">Добавить награду</string>
    <string name="no_data_to_save_title">Данных для сохранения нет!</string>
    <string name="no_data_to_save">Добавте данные для сохранения в файл.</string>
    <string name="no_event">Такого мероприятия нет.</string>
    <string name="no_squad">Такого отряда нет.</string>
    <string name="no_data">Такого мероприятия или отряда нет.</string>
    <string name="add_child">Добавить ребёнка</string>
    <string name="add_event">Добавить мероприятие</string>
    <string name="enter_child_name">Введите имя ребёнка.</string>
    <string name="enter_child_surname">Введите фамилию ребёнка.</string>
    <string name="enter_child_patronymic">Введите отчество ребёнка.</string>
    <string name="enter_child_birthday">Введите дату рождения ребёнка.</string>
    <string name="enter_parent_phone_number">Введите номер телефона родителей.</string>
    <string name="FIO">Фамилия Имя Отчество</string>
    <string name="FIO_Child">Ф.И.О. ребёнка</string>
    <string name="select_time">Выберите время: </string>

</resources>