<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/search_title"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menuPlaceAchievements"
                android:icon="@drawable/ic_navigate_next_compat"
                android:title="@string/place_menu" />
            <item
                android:id="@+id/menuSquadNumberAchievements"
                android:icon="@drawable/ic_navigate_next_compat"
                android:title="@string/squads_number_menu" />
            <item
                android:id="@+id/menuNameEventAchievements"
                android:icon="@drawable/ic_navigate_next_compat"
                android:title="@string/name_event_selection_arguments" />
        </menu>
    </item>
</menu>