<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/selectionArgumentTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="10sp"
            android:text="@string/search_title"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioNameEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_event_selection_arguments">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioTimeEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/selection_arguments_time">
            </RadioButton>

            <RadioButton
                android:id="@+id/radioDateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selection_arguments_date">
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>